--- a/po/wesnoth-nr/it.po
+++ b/po/wesnoth-nr/it.po
@@ -1,14 +1,14 @@
 # translation of it.po to Italian
 # Andrea Calvani <stildurak@yahoo.it>, 2006.
 # Luciano Montanaro <mikelima@cirulla.net>, 2006, 2007, 2008.
-# Antonio Rosella <arosella@yahoo.com>, 2012-2018.
+# Antonio Rosella <arosella@yahoo.com>, 2012-2019.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:10 UTC\n"
-"PO-Revision-Date: 2019-01-28 21:10+0100\n"
+"PO-Revision-Date: 2019-03-12 19:32+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italiano <wesnoth-l10n-it@cirulla.net>\n"
 "Language: it\n"
@@ -2015,6 +2015,9 @@ msgid ""
 "their claws will weaken you with sickness and disease. Nasty things; let’s "
 "chop them to pieces before they can leave the canal."
 msgstr ""
+"Ghouls! Hanno una insaziabile fame di carne e anche un solo graffio dei loro "
+"artigli ti indebolirà per le malattie e le infezioni. Brutte robe: "
+"facciamoli a pezzi prima che riescano a lasciare il canale."
 
 #. [message]: speaker=Malifor
 #: data/campaigns/Northern_Rebirth/scenarios/04_Clearing_the_Mines.cfg:588
@@ -4492,7 +4495,7 @@ msgstr "Sordo alle invocazioni del suo amico, Tallin cominciò l’attacco."
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/06b_Slave_of_the_Undead.cfg:232
 msgid "What have I done...?"
-msgstr "Che cosa ho fatto..."
+msgstr "Che cosa ho fatto...?"
 
 #. [message]: speaker=Malifor
 #: data/campaigns/Northern_Rebirth/scenarios/06b_Slave_of_the_Undead.cfg:258
@@ -6078,6 +6081,8 @@ msgid ""
 "You will win this scenario immediately upon moving onto the hex containing "
 "the Princess’s cage"
 msgstr ""
+"Uscirai immediatamente vincitore da questo scenario non appena riuscirai a "
+"muoverti sull’esagono che contiene la gabbia della principessa"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Northern_Rebirth/scenarios/08a_Elvish_Princess.cfg:336
@@ -6141,32 +6146,26 @@ msgid ""
 "The intruders are breaking in! Get to the walls and defend the fortress! And "
 "where did that Elvish Princess go?"
 msgstr ""
+"Gli invasori stanno facendo breccia! Alle mura e difendiamo la fortezza! E "
+"dove si è cacciata la principessa degli elfi?"
 
 #. [message]: speaker=Eryssa
 #: data/campaigns/Northern_Rebirth/scenarios/08a_Elvish_Princess.cfg:398
-#, fuzzy
-#| msgid ""
-#| "I am free! Thank you, my saviors. Who has come to rescue me from vile "
-#| "captivity?"
 msgid ""
 "(<i>hushed</i>) Thank you, my saviors. Who has come to rescue me from vile "
 "captivity?"
 msgstr ""
-"Sono libera! Grazie, miei salvatori. Chi è venuto a salvarmi da questa "
+"(<i>ovattato</i>) Grazie, miei salvatori. Chi è venuto a salvarmi da questa "
 "orribile prigionia?"
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/08a_Elvish_Princess.cfg:404
-#, fuzzy
-#| msgid ""
-#| "Later, princess, first let’s get outta — uh, let us take our leave of "
-#| "this place as swiftly as may be!"
 msgid ""
 "(<i>whispering</i>) Later, princess, first let’s get outta — uh, let us take "
 "our leave of this place as swiftly as may be!"
 msgstr ""
-"Più tardi, principessa, prima dobbiamo andar- ehm, prendiamo congedo da "
-"questo luogo il più rapidamente possibile!"
+"(<i>sussurrando</i>Più tardi, principessa, prima dobbiamo andar- ehm, "
+"prendere congedo da questo luogo il più rapidamente possibile!"
 
 #. [message]: speaker=Eryssa
 #: data/campaigns/Northern_Rebirth/scenarios/08a_Elvish_Princess.cfg:409
@@ -7371,10 +7370,8 @@ msgstr "Porta Tallin al cartello a nord"
 #: data/campaigns/Northern_Rebirth/scenarios/11a_The_Eastern_Flank.cfg:478
 #: data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg:484
 #: data/campaigns/Northern_Rebirth/scenarios/13a_Showdown.cfg:959
-#, fuzzy
-#| msgid "Death of Stalrag"
 msgid "Death of Eryssa"
-msgstr "Morte di Stalrag"
+msgstr "Morte di Eryssa"
 
 #. [message]: role=Supporter
 #: data/campaigns/Northern_Rebirth/scenarios/09a_Introductions.cfg:446
@@ -9168,7 +9165,7 @@ msgstr "Sconfiggi gli orchi"
 #. [note]
 #: data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg:498
 msgid "You will not receive any gold if Sisal dies."
-msgstr ""
+msgstr "Non riceverai oro se Sisal muore."
 
 #. [message]: id=Ha'Tuil
 #: data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg:517
@@ -9202,16 +9199,12 @@ msgstr "Ah, ah! Abbiamo l’oro, adesso!"
 
 #. [message]: id=Ha'Tuil
 #: data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg:552
-#, fuzzy
-#| msgid ""
-#| "Hahaha! Mission accomplished, men! Now let’s crush the rest of this scum "
-#| "and report back to the Master."
 msgid ""
 "Hahaha! Mission accomplished! I’ll send a wolf to the Master to deliver the "
 "gold. Now let’s crush the rest of this scum!"
 msgstr ""
-"Hahaha! Missione compiuta, uomini! Ora schiacciamo il resto di questa "
-"marmaglia e torniamo a rapporto dal nostro Maestro."
+"Hahaha! Missione compiuta! Manderò un lupo dal Maestro per portargli l’oro. "
+"Ora schiacciamo il resto di questa marmaglia!"
 
 #. [message]: id=Eryssa
 #: data/campaigns/Northern_Rebirth/scenarios/12a_Get_the_Gold.cfg:564
@@ -10686,6 +10679,7 @@ msgstr "Eryssa, no! Ti prego, non morire!"
 #: data/campaigns/Northern_Rebirth/utils/herodeaths.cfg:834
 msgid "How could this happen? We can’t possibly go on without her..."
 msgstr ""
+"Come è potuto accadere tutto ciò? Non possiamo proseguire senza di lei..."
 
 #: data/campaigns/Northern_Rebirth/utils/utils.cfg:114
 msgid "Arthian"
