--- a/po/wesnoth-dw/it.po
+++ b/po/wesnoth-dw/it.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:09 UTC\n"
-"PO-Revision-Date: 2019-01-28 21:18+0100\n"
+"PO-Revision-Date: 2019-03-12 18:55+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italiano <wesnoth-l10n-it@cirulla.net>\n"
 "Language: it\n"
@@ -388,10 +388,8 @@ msgstr "Ehi, ce l’ho fatta!"
 
 #. [message]: speaker=Gwabbo
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:626
-#, fuzzy
-#| msgid "Good work Kai, if I may say so."
 msgid "Good work, Kai, if I may say so."
-msgstr "Bel lavoro Kai, se così si può dire."
+msgstr "Bel lavoro Kai, se posso dirlo."
 
 #. [scenario]: id=02_Flight
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:27
@@ -967,6 +965,8 @@ msgid ""
 "I wonder why such a strangely colored wolf emerged from the forest over "
 "there."
 msgstr ""
+"Mi chiedo perché un lupo bizzarramente colorato sia emerso dalla foresta "
+"laggiù."
 
 #. [message]: speaker=unit
 #: data/campaigns/Dead_Water/scenarios/03_Wolf_Coast.cfg:306
@@ -979,7 +979,7 @@ msgid ""
 "I know what that is. It’s a storm trident. It is supposed to let you control "
 "the lightning."
 msgstr ""
-"So che cos’è. È un tridente della tempesta. Si crede permetta di controllare "
+"So che cos’è. È un tridente delle tempeste. Si crede permetta di controllare "
 "i fulmini."
 
 #. [message]: speaker=narrator
