--- a/po/wesnoth-tb/it.po
+++ b/po/wesnoth-tb/it.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:10 UTC\n"
-"PO-Revision-Date: 2019-02-09 11:31+0100\n"
+"PO-Revision-Date: 2019-03-15 21:52+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "Language: it\n"
@@ -677,10 +677,6 @@ msgstr "Li ho visti! Eccoli là!"
 
 #. [message]: speaker=Muff Toras
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:440
-#, fuzzy
-#| msgid ""
-#| "Curses! If they had been an hour slower our master’s reinforcements would "
-#| "already be here to meet us."
 msgid ""
 "Curses! If they had been an hour slower, our master’s reinforcements would "
 "already be here to meet us."
@@ -1003,12 +999,12 @@ msgstr "Guardia del castello"
 #. [time]: id=indoors_dark_castle
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:235
 msgid "Indoors (dark castle)"
-msgstr ""
+msgstr "Interno (castello buio)"
 
 #. [time]: id=indoors_dark_castle_lit
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:250
 msgid "Indoors (lit)"
-msgstr ""
+msgstr "Interno (illuminato)"
 
 #. [objective]: condition=win
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:306
@@ -1121,10 +1117,6 @@ msgstr "Sbagliato! Muori!"
 
 #. [message]: speaker=Knago-Brek
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:492
-#, fuzzy
-#| msgid ""
-#| "Haha! We not kill people for long time. Weapon wants blood. We now kill "
-#| "humans!!"
 msgid ""
 "Haha! We not kill people for long time. Weapon wants blood. We now kill "
 "humans!"
@@ -1134,10 +1126,6 @@ msgstr ""
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:497
-#, fuzzy
-#| msgid ""
-#| "My sword-arm has a say in who will do the dying. Come on, men, let’s kill "
-#| "some orcs."
 msgid ""
 "My sword-arm shall have a say in who will do the dying. Come on, men, let’s "
 "kill some orcs."
@@ -1255,7 +1243,7 @@ msgstr "Potrebbe essere importante, sarà meglio prenderla."
 #. [message]: speaker=unit
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:764
 msgid "This castle seems as dark as a cave!"
-msgstr ""
+msgstr "Questo castello sembra buio come una grotta!"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:770
@@ -1264,6 +1252,9 @@ msgid ""
 "permanent night). Place your units carefully, as your troops will be weaker "
 "and enemy units stronger."
 msgstr ""
+"Questo castello è sotto una costante, <i> caotica </i> ora del giorno "
+"(equivalente alla notte permanente). Posiziona le tue unità con attenzione, "
+"perché le tue truppe saranno più deboli e le unità nemiche più forti."
 
 #. [message]: speaker=unit
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:790
@@ -1612,7 +1603,7 @@ msgstr ""
 #. [message]: speaker=Tairach
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:341
 msgid "Today, you shall pay for disfiguring my face, mage!"
-msgstr ""
+msgstr "Oggi la pagherai per avermi sfigurato la faccia, mago!"
 
 #. [message]: speaker=Baran
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:346
@@ -1620,6 +1611,8 @@ msgid ""
 "I have already paid with the lives of my men at Toen Caric. It is time I "
 "righted that mistake and finished this once and for all."
 msgstr ""
+"Ho già pagato con la vita dei miei uomini a Toen Caric. È tempo di rimediare "
+"a quell’errore e finire tutto ciò una volta per tutte."
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:355
@@ -1636,7 +1629,7 @@ msgid ""
 "So much has been destroyed. It will be difficult to repair all that the orcs "
 "and undead have wrecked. And they could come again."
 msgstr ""
-"Così tante cose sono state distrutte. Dovremo faticare per riparare tutti i "
+"Così tante cose sono andate distrutte. Dovremo faticare per riparare tutti i "
 "danni che gli orchi ed i non-morti hanno causato. E potrebbero anche tornare "
 "di nuovo."
 
@@ -1729,7 +1722,7 @@ msgstr "Arvith"
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/utils/characters.cfg:21
 msgid "All is lost now that I am dead..."
-msgstr "Ora che sono morto è la fine..."
+msgstr "Ora che sono morto tutt è perduto..."
 
 #. [message]: speaker=Baran
 #: data/campaigns/Two_Brothers/utils/characters.cfg:39
