--- a/po/wesnoth-tsg/it.po
+++ b/po/wesnoth-tsg/it.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:10 UTC\n"
-"PO-Revision-Date: 2019-02-26 20:55+0100\n"
+"PO-Revision-Date: 2019-03-14 19:08+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "Language: it\n"
@@ -14,7 +14,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.0.6\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [campaign]: id=The_South_Guard
 #: data/campaigns/The_South_Guard/_main.cfg:9
@@ -2157,8 +2157,6 @@ msgstr "Questi erano dei semplici servi di un signore molto più potente."
 
 #. [message]: speaker=second_unit
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:530
-#, fuzzy
-#| msgid "One less evil in this forest."
 msgid "One fewer evil in this forest."
 msgstr "Un malvagio in meno in questa foresta."
 
@@ -3896,10 +3894,6 @@ msgstr ""
 
 #. [message]: speaker=Sir Gerrick
 #: data/campaigns/The_South_Guard/scenarios/07b_Pebbles_in_the_Flood.cfg:237
-#, fuzzy
-#| msgid ""
-#| "These forts and ill-equipped for holding back so many undead. I am "
-#| "certain we will be slaughtered if we try to fight them here!"
 msgid ""
 "These forts are ill-equipped for holding back so many undead. I am certain "
 "we will be slaughtered if we try to fight them here!"
@@ -3974,13 +3968,6 @@ msgstr ""
 
 #. [message]: speaker=Urza Afalas
 #: data/campaigns/The_South_Guard/scenarios/07b_Pebbles_in_the_Flood.cfg:269
-#, fuzzy
-#| msgid ""
-#| "All things end one way or another. Alas, I would have liked to see my "
-#| "home in Westin one more time, but I am too tired. Tired of running, and "
-#| "tired of fleeing from these undead, who corrupted and consumed my "
-#| "brothers. You may think us criminals and outlaws, but we are still human "
-#| "and we still know loyalty and gratitude, sir knights."
 msgid ""
 "All things end one way or another. Alas, I would have liked to see my home "
 "in Westin one more time, but I am too tired. Tired of running, and tired of "
@@ -3992,8 +3979,8 @@ msgstr ""
 "piaciuto vedere ancora una volta la mia casa a Westin, ma sono troppo "
 "stanco. Stanco di correre, e stanco di fuggire da questi non-morti, che "
 "hanno corrotto e consunto i miei fratelli. Potrai pensare che siamo "
-"criminali e fuorilegge, ma siam ancora umani e conosciamo ancora la lealtà e "
-"la gratitudine, signori cavalieri."
+"criminali e fuorilegge, ma siamo ancora umani e conosciamo ancora la lealtà "
+"e la gratitudine."
 
 #. [message]: speaker=Sir Gerrick
 #: data/campaigns/The_South_Guard/scenarios/07b_Pebbles_in_the_Flood.cfg:273
