--- a/po/wesnoth-units/it.po
+++ b/po/wesnoth-units/it.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:10 UTC\n"
-"PO-Revision-Date: 2019-02-15 19:05+0100\n"
+"PO-Revision-Date: 2019-03-15 22:25+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italian <>\n"
 "Language: it\n"
@@ -2305,7 +2305,7 @@ msgstr ""
 "nelle loro naturali dimore tra gli alberi, sono quasi inattaccabili, capaci "
 "di assassinare in nemici dalle ombre con poche possibilità di essere "
 "attaccati. Questa è l’abilità che instilla più paura in una armata di "
-"invasione, perchè combattere un nemico che può essere a malapena tracciato o "
+"invasione, perché combattere un nemico che può essere a malapena tracciato o "
 "visto nei boschi lascia pochissimo spazio per un contrattacco e si traduce "
 "solitamente in una sonora sconfitta."
 
@@ -2994,6 +2994,18 @@ msgid ""
 "to goblins, recognize that picking a fight with the rider is also picking a "
 "fight with jaws that strike faster than a sword, and almost as hard."
 msgstr ""
+"L’esperienza in battaglia rafforza non solo le abilità di combattimento sia "
+"della cavalcatura che del cavaliere, ma rafforza anche il legame tra loro. "
+"Mentre un cavaliere umano può cavalcare diversi destrieri in battaglia, con "
+"“cavaliere goblin” ci si riferisce a goblin e lupo insieme come una singola "
+"unità, ferocemente leale l’uno all’altro oltre ogni limite.\n"
+"\n"
+"Tra gli orchi, i cavalcatori vengono trattati come una classe superiore ai "
+"goblin, anche quando sono separati dalla loro cavalcatura. Le reclute degli "
+"orchi, sebbene si sentano superiori ai goblin, riconoscono che scegliere di "
+"combattere contro un cavalcatore significa anche raccogliere la sfida di di "
+"combattere con mascelle che colpiscono più velocemente di una spada, e quasi "
+"altrettanto duramente."
 
 #. [unit_type]: id=Goblin Pillager, race=wolf
 #: data/core/units/goblins/Pillager.cfg:4
@@ -3078,19 +3090,6 @@ msgstr "Cavalcatore di lupi"
 
 #. [unit_type]: id=Wolf Rider, race=wolf
 #: data/core/units/goblins/Wolf_Rider.cfg:30
-#, fuzzy
-#| msgid ""
-#| "No one is quite sure how the practice of taming and riding wolves came "
-#| "into being, but the advantages of it for a goblin are obvious. Goblins "
-#| "are smaller and much weaker than their orcish kin, and are often tasked "
-#| "to the most dangerous and unwanted parts of a fight. Any who can manage "
-#| "to win themselves a mount have a much safer, and daresay, more amusing "
-#| "role in combat.\n"
-#| "\n"
-#| "Wolves, likely, could never support the weight of a man in plate, but a "
-#| "goblin in leather armor is a simple load to bear. Quite unlike horses, "
-#| "these mounts have a rather easy time traversing the mountains, though "
-#| "water and woods will still slow them down."
 msgid ""
 "No one is quite sure how the practice of taming and riding wolves came into "
 "being, but the advantages of it for a goblin are obvious. Goblins are much "
@@ -3107,10 +3106,10 @@ msgstr ""
 "ma i vantaggi che i goblin traggono dall’impiego di tale arte sono ovvi. I "
 "goblin sono più piccoli e molto più deboli dei loro fratelli orchi e spesso "
 "vengono assegnati ai compiti più pericolosi e indesiderati da svolgere in "
-"battaglia. Chiunque sia in grado di cavalcare un lupo ha un ruolo più "
-"sicuro, e finanche più divertente, nei combattimenti.\n"
+"battaglia. Chiunque sia in grado di cavalcare un lupo ha un ruolo più sicuro "
+"nei combattimenti.\n"
 "\n"
-"Verosimilmente, i lupi non potrebbero mai sostenere il peso di un uomo "
+"Verosimilmente, i lupi non potrebbero mai sostenere il peso di un vero orco "
 "munito di corazza, ma un goblin in armatura di pelle è un fardello leggero "
 "da trasportare. Diversamente dai cavalli, i lupi sono ben più abili nella "
 "traversata delle montagne, ma vengono comunque rallentati dall’acqua e dalle "
